fix / post creation, google news, preview w/out image spacing

--- a/public/css/components/post-creators/from-sources/source-google-news.less
+++ b/public/css/components/post-creators/from-sources/source-google-news.less
@@ -17,7 +17,12 @@
     }
 
     > table > tbody > tr > td:first-child {
-      padding: 0 20px 0 0;
+      width: 0;
+    }
+
+    > table > tbody > tr > td:first-child > font > a {
+      margin-right: 20px;
+      display: inline-block;
     }
   }
 }
